# mlx

./: run_distributed.sh  tmp.py
benchmarks/python/comparative/: bench_distributed.py
docs/src/: install.rst
examples/cpp/: CMakeLists.txt  all_gather.cpp  nvfp4.cu  qqmm.cu
mlx/: fast.cpp  ops.cpp  ops.h  primitives.cpp  transforms.cpp
mlx/backend/common/: buffer_cache.h
mlx/backend/cpu/: distributed.cpp  quantized.cpp
mlx/backend/cuda/: CMakeLists.txt  allocator.cpp  cublas_utils.cpp  cublas_utils.h  device.cpp  device.h  distributed.cu  eval.cpp  matmul.cpp  primitives.cpp  slicing.cpp
mlx/backend/cuda/gemms/: cublas_gemm.cpp  cublas_gemm.h
mlx/backend/cuda/quantized/: cublas_qqmm.cpp  cublas_qqmm.h  fp_quantize.cu  matmul.cpp  nvfp4_quantize.cuh  qqmm_utils.cu  qqmm_utils.h  quantized.cpp  quantized.h
mlx/distributed/: distributed.cpp  distributed.h  distributed_impl.h  ops.cpp  ops.h  primitives.cpp  primitives.h
mlx/distributed/mpi/: mpi.cpp
mlx/distributed/nccl/: nccl.cpp
mlx/distributed/ring/: ring.cpp
python/mlx/: distributed_run.py
python/mlx/nn/: quantization.py  utils.py
python/mlx/nn/layers/: quantized.py
python/src/: distributed.cpp
python/tests/: mlx_distributed_tests.py  nccl_test_distributed.py  ring_test_distributed.py
tmp/: compile.sh  run.py  run.sh  run_python.sh  test_cuda.cpp  test_nccl.cpp  test_nccl.py  test_nccl_coal.cpp  test_stream.cpp
